# virtualbox-vm-starter

./: .gitignore  .gitmodules  LICENSE  README.md
console/: CMakeLists.txt  res.rc  vm-starter.cpp  vm.cpp
qt-gui/: VMStarter.pro  app.qrc  mainwindow.cpp  mainwindow.h  mainwindow.ui  vm-start.sln  vm-start.vcxproj  vm.cpp
